# portfolio-analyzer

./: .gitignore  Makefile  README.md  app.py  generate_fake_invest_dataset.py  pyproject.toml  requirements.txt
automation/: README.md  __init__.py  core.py  digest.py  notify_email.py  pit_universe.py  validation.py  weekly_job.py
automation/ingest/: __init__.py  clean_csv.py  robinhood_scraper.py
automation/launchd/: com.portfolioanalyzer.dashboard.plist  com.portfolioanalyzer.generate.plist  com.portfolioanalyzer.process.plist  run.sh  run_dashboard.sh  secrets.env.example
data/processed/structured/: buy_candidate_universe.csv  buy_candidate_universe_enriched.csv  dow30_constituents.csv  (+3 more)
data/raw/: buy_candidate_universe.csv  fake_active_trader.csv  fake_aggressive_growth.csv  fake_dividend_income.csv  fake_index_buy_and_hold.csv  fake_mantis_invest.csv  sp500_constituents.csv
data/user_data/: tracker.db
data_pipeline/: PortfolioRiskDiagnosis.ipynb  RiskActionLLMExplanations.ipynb  build_buy_candidate_universe.py  build_company_facts.py  build_data_jupyter.ipynb  build_macro_series.py  build_news_corpus.py  build_structured_unstructured_chroma.ipynb  review_full_dataset_sources.ipynb
docs/: risk_component_scores.md
memory/: MEMORY.md  feedback_style.md  project_context.md  technical_state.md  user_profile.md
notebooks/: mvp.ipynb  ollama_portfolio_analyzer.ipynb  qwen_portfolio_analyzer.ipynb
portfolio_analyzer/: __main__.py  agent.py  app.py  assistant.py  buy_candidates.py  diagnosis.py  local_llm.py  portfolio_pdf.py  tracker.py
