[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "portfolio_analyzer"
version = "0.0.1"
description = "Hyper-personalized stock portfolio analyzer"
authors = [
  { name = "Sagnik Rana" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["portfolio_analyzer"]
include = ["pyproject.toml", "portfolio_analyzer/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["portfolio_analyzer"]
force-sort-within-sections = true

